--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    New features:
+
+    - imported more schema loading features from EntityModel
 
 0.003     2019-04-20 15:11:51+08:00 Asia/Kuala_Lumpur
     Bugs fixed:
