--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    No new features.
+
+    Dependencies:
+
+    - Future::AsyncAwait 0.26 for more bug fixes, plus latest Ryu and Ryu::Async
 
 0.004     2019-04-21 14:14:22+08:00 Asia/Kuala_Lumpur
     New features:
