--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    New features:
+
+    - minor improvements to ORM handling
 
 0.006     2019-05-01 06:45:34+08:00 Asia/Kuala_Lumpur
     New features:
