--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    New features:
+
+    - constraint and foreign key methods for ::ORM
 
 0.007     2019-05-05 19:18:15+08:00 Asia/Kuala_Lumpur
     New features:
