--- a/Changes
+++ b/Changes
@@ -1,6 +1,12 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    No new features.
+
+    Dependencies:
+
+    - Latest version of Ryu, Future::AsyncAwait and Syntax::Keyword::Try to
+    pick up some recent bugfixes.
 
 0.009     2019-06-30 01:48:28+08:00 Asia/Kuala_Lumpur
     New features:
