--- a/Changes
+++ b/Changes
@@ -1,6 +1,13 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    No new features.
+
+    Bugs fixed:
+
+    - Removed AutoPrereqs dzil plugin since it was picking up downstream dependencies
+    due to `require` lines, thanks to CHORNY for reporting
+    (https://github.com/team-at-cpan/Database-Async/issues/5)
 
 0.011     2020-10-23 18:47:35+08:00 Asia/Kuala_Lumpur
     No new features.
