--- a/Changes
+++ b/Changes
@@ -1,6 +1,15 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    [New features]
+
+    - encoding now supported, for cases where all interaction with the database
+    is text-only
+
+    [Bugs fixed]
+
+    - query completion logic has been refactored to cover the different states better,
+    particularly regarding streaming in/out (e.g. COPY in PostgreSQL)
 
 0.013     2020-12-03 00:13:37+08:00 Asia/Kuala_Lumpur
     New features:
