--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    [Bugs fixed]
+    - Perform cleanup when cancelling queries
 
 0.017     2021-12-08 22:50:12+08:00 Asia/Kuala_Lumpur
     [New features]
