--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    [New features]
+
+    - allow schema entries to be prepopulated via ->add_schema before ->load_from,
+    for example to include new built-in or extension types such as pgvector
 
 0.019     2023-12-04 23:19:30+08:00 Asia/Singapore
     [New features]
